<resources>
    <string name="home">HOME</string>
    <string name="statistiche">STATISTICHE</string>
    <string name="amici">AMICI</string>

    <string name="nomeGruppo">GRUPPO:</string>
    <string name="nParoleIndovinate">PAROLE INDOVINATE:</string>
    <string name="nPassoRimasti">PASSO RIMASTI:</string>

    <string name="app_name">IntesaVincente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giocaSquadre">GIOCA A SQUADRE</string>
    <string name="allenamento">ALLENAMENTO</string>
    <string name="crea_gruppo">CREA GRUPPO</string>
    <string name="unisciti_a_gruppo">UNISCITI A GRUPPO</string>
    <string name="indovinatore">INDOVINATORE</string>
    <string name="suggeritore">SUGGERITORE</string>
    <string name="unisciti_come">UNISCITI COME</string>
    <string name="avanti">AVANTI</string>

    <string name="inserisciParpla">INSERISCI PAROLA</string>
    <string name="suggerimento">Parola intuita</string>
    <string name="conferma">CONFERMA</string>

    <string name="inserisci_nome_gruppo">INSERISCI NOME GRUPPO</string>

    <string name="modificaProfilo">MODIFICA IL TUO PROFILO</string>
    <string name="nickname">Nickname</string>
    <string name="form_email_address">Email</string>
    <string name="form_password">Password</string>
    <string name="accedi">ACCEDI</string>
    <string name="skip">salta</string>
    <string name="registrati">Registrati</string>
    <string name="google_signin">accedi con google</string>
    <string name="registration_failure">An error occured</string>
    <string name="form_nickname_address">Nickname</string>
    <string name="salvaModifiche">SALVA MODIFICHE</string>

    <string name="inserisci_nickname">Inserisci Nickname</string>
    <string name="salva_nickname">SALVA NICKNAME</string>
    <string name="logout">LOGOUT</string>
</resources>